<resources>
    <string name="app_name">AlFahres System</string>

    <string name="title_section1">New Requests</string>
    <string name="title_section2">Ongoing Files</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="LOGIN_LBL_USERNAME">User Name</string>
    <string name="LOGIN_LBL_PASSWORD">Password</string>
    <string name="btn_login_login">Login Now</string>
    <string name="btn_login_clear">Clear</string>
    <string name="TITLE_LOGIN">Al Fahres System</string>
    <string name="SETTINGS_BTN_BACK">Back</string>
    <string name="LOGIN_UNATHORIZED">UnAuthorized</string>
    <string name="LOGIN_UNAUTH_MESSAGE">You are not Authorized to use The system</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_logout_main">Logout</string>
    <string name="file_view_fileNo">File No</string>
    <string name="file_view_patientNo">Patient No :</string>
    <string name="file_view_cabinetId">Cabin No :</string>
    <string name="file_view_shelfId">Shelf No :</string>
    <string name="file_view_column">Col. No :</string>
    <string name="main_files_alertDlg_Title">Loading Files</string>
    <string name="main_loading_title">Loading Please Wait.....</string>
    <string name="SCAN_SETTINGS">Scan</string>
    <string name="LOGIN_SERVER_UNAVAILABLE_TITLE">Unavailable</string>
    <string name="LOGIN_SERVER_UNAVAILABLE_MSG">Server is not Responding</string>
    <string name="LOGIN_LOGGING_IN_TITLE">Logging In...</string>
    <string name="SINGLE_CHOICE_DLG_TITLE">Choose an Option...</string>
    <string name="SINGLE_CHOICE_DLG_MSG">Choose one Option below.</string>
    <string name="TXT_FORCE_SYNC">Force Sync</string>
    <string name="MISSING_FILE_ICON_DESC">Missing File Description</string>
    <string name="SCAN_RECEIVE_TITLE">Scan And Receive</string>
    <string name="file_fileNumber">File No.</string>
    <string name="file_patientNumber">Patient No.</string>
    <string name="file_patientName">Pat. Name</string>
    <string name="file_coordinatorName">Coordinator Name</string>
    <string name="file_batchNumber">Batch No.</string>
    <string name="file_appointment_date">Appt. Date</string>
    <string name="file_appointment_time">Appt. Time</string>
    <string name="file_appointment_HijriDate">Appt. Hijri</string>
    <string name="file_appointment_type">Appt. Type</string>
    <string name="menu_stamp">Mark Files</string>
    <string name="file_clinicName">Clinic Name</string>
    <string name="file_clinicCode">clinic Code</string>
    <string name="file_docName">Doc. Name</string>
    <string name="file_docCode">Doc. Code</string>
    <string name="SYNC_OFFLINE_TITLE">Notification...</string>
    <string name="SYNC_DIALOG_MESSAGE">Operation has been Scheduled when connectivity becomes available.</string>
    <string name="COORDINATOR_COLLECT_SCREEN">Collect Files</string>
    <string name="ScreenUtils_NewRequests">New Requests</string>
    <string name="ScreenUtils_Ongoing_Files">Outgoing Files</string>
    <string name="ScreenUtils_Receive_Files">Receive Files</string>
    <string name="ScreenUtils_Distribute_Files">Distribute Files</string>
    <string name="ScreenUtils_Collect_Files">Collect Files</string>
    <string name="Fragment_NewRequests_Title">New Requests</string>
    <string name="KEEPER_ARCHIVE_TITLE">Check In</string>
    <string name="SHIPPING_SCREEN_TITLE">Sorting Files</string>
    <string name="TRANSFER_FILES_SCREEN_TITLE">Transfer Files</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="CHECK_FILE_STATUS_TITLE">Check Files Status</string>
    <string name="last_seen_by">Emp. Name</string>
    <string name="file_status_lbl">File Status</string>
    <string name="CHECK_OUT_SCREEN_TITLE">Check Out Files</string>
    <string name="APP_VERSION">V3.0</string>
    <string name="INPATIENT_SCREEN_TITLE">In-Patient Files</string>
    <string name="INPATIENT_RECEIVE_TITLE">Receive Files</string>
    <string name="INPATIENT_CHECKOUT_TITLE">CheckOut Files</string>
    <string name="INPATIENT_STORAGE_SCREEN_TITLE">Store Files</string>
    <string name="INPATIENT_COMPLETE_FRAGMENT">Send Files</string>


</resources>
