<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


<RelativeLayout
    android:layout_width="match_parent"
    android:scrollbarStyle="outsideInset"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/LOGIN_LBL_USERNAME"
        android:id="@+id/lblUserName"
        android:layout_below="@+id/imageView"
        android:layout_alignRight="@+id/btn_login_login"
        android:layout_alignEnd="@+id/btn_login_login"
        android:layout_marginTop="37dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userNameTxt"
        android:inputType="text|textNoSuggestions"
        android:layout_below="@+id/lblUserName"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/LOGIN_LBL_PASSWORD"
        android:id="@+id/lbl_password"
        android:layout_below="@+id/userNameTxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordTxt"
        android:layout_below="@+id/lbl_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_clear"
        android:drawableLeft="@drawable/clear"
        android:id="@+id/btn_login_clear"
        android:layout_below="@+id/passwordTxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_login"
        android:id="@+id/btn_login_login"
        android:focusable="true"
        android:drawableLeft="@drawable/loginicon"
        android:layout_below="@+id/passwordTxt"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/btn_login_clear" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginProgressBar"
        android:layout_below="@+id/btn_login_login"
        android:layout_centerHorizontal="true" />


</RelativeLayout>

</ScrollView>