<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/fileNoLbl"
        android:text="@string/file_view_fileNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/new_file_FileNumber"
        android:layout_width="wrap_content"
        android:text="File Number"
        android:layout_height="wrap_content"
        style="@style/fileDetailInfo"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/Txt_file_patientNumber"
         />


    <TextView
        android:id="@+id/Txt_file_patientNumber"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:text="@string/file_patientNumber"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fileNoLbl"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="3dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/new_file_PatientNumber"
        android:layout_width="wrap_content"
        style="@style/fileDetailInfo"
        android:text="Patient Number"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@id/Txt_file_patientNumber"
        android:layout_below="@id/new_file_FileNumber"
        android:layout_height="wrap_content" />



    <TextView
        android:id="@+id/file_status_lbl"
        android:text="@string/file_status_lbl"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_file_PatientNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/file_status_Txt"
        android:text="@string/file_status_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/fileDetailInfo"
        android:layout_gravity="left"
        android:layout_alignTop="@+id/file_status_lbl"
        android:layout_alignRight="@+id/new_file_FileNumber"
        android:layout_alignEnd="@+id/new_file_FileNumber" />


</RelativeLayout>