<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:layout_width="96dp"
        android:src="@drawable/patientfile"

        android:layout_weight="1"
        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
        android:paddingTop="8dp"
        android:layout_height="96dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/file_view_fileNo"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:paddingTop="5dp"
            android:layout_marginTop="4dp"
            android:id="@+id/fileNoLbl" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="006654454"
            android:textColor="@android:color/holo_red_dark"
            android:id="@+id/txt_fileNo"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_view_cabinetId"
            android:id="@+id/cabin_no_lbl"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/txtcabinNo"
            android:textColor="@android:color/holo_red_dark"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_view_shelfId"
            android:id="@+id/shelf_noLbl"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:textColor="@android:color/holo_red_dark"
            android:id="@+id/txtshelfId"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="34dp" />


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="right"
        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:id="@+id/missing_file_img"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:contentDescription="@string/MISSING_FILE_ICON_DESC" />


    </LinearLayout>


</LinearLayout>